--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
   "license": "ISC",
   "dependencies": {
     "death": "^1.1.0",
-    "ethereumjs-testrpc-sc": "https://github.com/leapdao/testrpc-sc.git#master",
     "istanbul": "^0.4.5",
     "keccakjs": "^0.2.1",
     "req-cwd": "^1.0.1",
     "shelljs": "^0.7.4",
     "sol-explore": "^1.6.2",
-    "solidity-parser-sc": "https://github.com/leapdao/solidity-parser.git#fd9d5c809e4795c9f703cb7f5eb0bf2935cf5f35",
+    "solidity-parser-sc": "https://github.com/cashlink/solidity-parser.git",
     "tree-kill": "^1.2.0",
     "web3": "^0.20.6"
   },
@@ -41,7 +40,7 @@
     "ethereumjs-account": "~2.0.4",
     "ethereumjs-tx": "^1.2.2",
     "ethereumjs-util": "^5.0.1",
-    "ethereumjs-vm": "https://github.com/leapdao/ethereumjs-vm-sc.git#master",
+    "ethereumjs-vm": "^3.0.0",
     "merkle-patricia-tree": "~2.1.2",
     "mocha": "^4.1.0",
     "request": "^2.81.0",
